# ECS

./: .gitignore  CMakeLists.txt  LICENSE.md
include/ECS/: Component.hpp  ECS.hpp  ECSManager.hpp  Entity.hpp  System.hpp
src/ECS/: Component.cpp  ECSManager.cpp
tests/: main.cpp
